@@ -1,4 +1,5 @@
 * 0.11.1 (unreleased)
+   * Fixed asteroids spawning in not proper shapes
    * Fixed autonav wobble
    * Point defense won't shoot at disabled pilots anymore
    * Fixed battery descriptions
